fix: adjust interface
