# go/internal/openapi/api/openapi.yaml
@@ -719,7 +719,7 @@ components:
       - msg
       - type
       type: object
-    Invoiceing:
+    Ordering:
       description: Defines the ordering in a listing of results.
       enum:
       - asc
@@ -994,12 +994,6 @@ components:
       required:
       - data
       type: object
-    Ordering:
-      description: Defines the ordering in a listing of results.
-      enum:
-      - asc
-      - desc
-      type: string
     WebhookMessage:
       description: The request body of the webhook POST request.
       properties:
@@ -1041,6 +1035,7 @@ components:
         url:
           description: The webhook endpoint url
           example: http://example.com/endpoint
+          format: uri
           type: string
         eventTypes:
           description: The webhook endpoint associated event types
@@ -1105,6 +1100,7 @@ components:
         url:
           description: The webhook endpoint url
           example: http://example.com/endpoint
+          format: uri
           nullable: true
           type: string
         eventTypes:
@@ -1174,6 +1170,7 @@ components:
         url:
           description: The webhook endpoint url
           example: http://example.com/endpoint
+          format: uri
           type: string
         filter:
           description: The webhook endpoint url
