# javascript/src/openapi/models/all.ts
@@ -5,7 +5,6 @@ export * from './HTTPValidationError'
 export * from './HttpErrorOut'
 export * from './InvoiceIn'
 export * from './InvoiceOut'
-export * from './Invoiceing'
 export * from './ListResponseEndpointOut'
 export * from './ListResponseInvoiceOut'
 export * from './Ordering'
